--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -13,9 +13,9 @@
             </div>
 
             <!-- Footer Links -->
-            <div class="grid grid-cols-2 gap-8 sm:grid-cols-3">
+            <div class="grid grid-cols-1 gap-3 sm:grid-cols-3">
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">For Beginners</h2>
+                    <h2 class="sm:mb-6 mb-1 mt-3 text-sm font-semibold text-gray-900 uppercase dark:text-white">For Beginners</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium space-y-2">
                         <li>
                             <a href="#" class="hover:underline">New Account</a>
@@ -26,14 +26,14 @@
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Contact Us</h2>
+                    <h2 class="sm:mb-6 mb-1 mt-3 text-sm font-semibold text-gray-900 uppercase dark:text-white">Contact Us</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium space-y-2">
-                        <li>Email: support&#64;tropicalhaven.lk</li>
-                        <li>Phone: 071 25123127 | 071 25123129</li>
+                        <li>info&#64;tropicalheaven.com</li>
+                        <li>071 251231278</li>
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Visit Us At</h2>
+                    <h2 class="sm:mb-6 mb-1 mt-3 text-sm font-semibold text-gray-900 uppercase dark:text-white">Visit Us At</h2>
                     <ul class="text-gray-500 dark:text-gray-400 font-medium space-y-2">
                         <li>123 Oceanview Road</li>
                         <li>Colombo 05, Sri Lanka</li>
