--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,8 @@
                         <path
                             d="M3 7.5a.5.5 0 0 0-1 0v5a.5.5 0 0 0 1 0zM11 6a1.5 1.5 0 0 1 1.5 1.5V8h2A1.5 1.5 0 0 1 16 9.5v5a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 14.5v-5A1.5 1.5 0 0 1 6.5 8h2v-.5A1.5 1.5 0 0 1 10 6zM9.5 7.5V8h2v-.5A.5.5 0 0 0 11 7h-1a.5.5 0 0 0-.5.5M6 9.5v5a.5.5 0 0 0 .5.5H7V9h-.5a.5.5 0 0 0-.5.5m7 5.5V9H8v6zm1.5 0a.5.5 0 0 0 .5-.5v-5a.5.5 0 0 0-.5-.5H14v6z" />
                     </svg>
-                    <h2 class="mt-1"><span class="text-blue-900 dark:text-blue-800 font-semibold">80, 409</span> Travelers</h2>
+                    <h2 class="mt-1"><span class="text-blue-900 dark:text-blue-800 font-semibold">80, 409</span>
+                        Travelers</h2>
                 </div>
                 <div class="flex flex-col items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor"
@@ -28,12 +29,14 @@
                         <path
                             d="M15 14s1 0 1-1-1-4-5-4-5 3-5 4 1 1 1 1zm-7.978-1L7 12.996c.001-.264.167-1.03.76-1.72C8.312 10.629 9.282 10 11 10c1.717 0 2.687.63 3.24 1.276.593.69.758 1.457.76 1.72l-.008.002-.014.002zM11 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4m3-2a3 3 0 1 1-6 0 3 3 0 0 1 6 0M6.936 9.28a6 6 0 0 0-1.23-.247A7 7 0 0 0 5 9c-4 0-5 3-5 4q0 1 1 1h4.216A2.24 2.24 0 0 1 5 13c0-1.01.377-2.042 1.09-2.904.243-.294.526-.569.846-.816M4.92 10A5.5 5.5 0 0 0 4 13H1c0-.26.164-1.03.76-1.724.545-.636 1.492-1.256 3.16-1.275ZM1.5 5.5a3 3 0 1 1 6 0 3 3 0 0 1-6 0m3-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4" />
                     </svg>
-                    <h2 class="mt-1"><span class="text-blue-900 dark:text-blue-800 font-semibold">60%</span> Repeated Guests</h2>
+                    <h2 class="mt-1"><span class="text-blue-900 dark:text-blue-800 font-semibold">60%</span> Repeated
+                        Guests</h2>
                 </div>
                 <div class="flex flex-col items-center">
                     <div class="flex gap-1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="35" fill="currentColor"
-                            class="text-blue-900 dark:text-blue-800" viewBox="0 0 16 16" *ngFor="let i of [].constructor(4)">
+                            class="text-blue-900 dark:text-blue-800" viewBox="0 0 16 16"
+                            *ngFor="let i of [].constructor(4)">
                             <path
                                 d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.56.56 0 0 0-.163-.505L1.71 6.745l4.052-.576a.53.53 0 0 0 .393-.288L8 2.223l1.847 3.658a.53.53 0 0 0 .393.288l4.052.575-2.906 2.77a.56.56 0 0 0-.163.506l.694 3.957-3.686-1.894a.5.5 0 0 0-.461 0z" />
                         </svg>
@@ -44,7 +47,7 @@
             </div>
 
             <button type="button"
-                class="font-bold text-md px-5 py-2.5 text-center inline-flex items-center text-white rounded-lg group  bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80">
+                class="mb-10 font-bold text-md px-5 py-2.5 text-center inline-flex items-center text-white rounded-lg group  bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80">
                 Book Now
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
                     fill="none" viewBox="0 0 14 10">
@@ -65,14 +68,27 @@
     </div>
 </section>
 
+
 <section>
     <h1
         class="max-w-2xl mb-4 text-md font-semibold tracking-tight leading-none md:text-lg xl:text-xl text-[#152C5B] dark:text-white font-poppins">
         Most Picked
     </h1>
-    <div class="flex gap-16 mx-auto">
+    <div class="md:flex gap-16 mx-auto hidden">
         <app-card *ngFor="let item of [].constructor(4); let i = index" [star]="i" [popularChoice]="true"></app-card>
     </div>
+
+    <swiper-container loop="true" autoplay="true" autoplay-delay="5000" navigation="false" pagination="true"
+        space-between="28" slides-per-view="1" lazy="true" breakpoints='{
+        "630": {"slidesPerView": 2, "spaceBetween": 28},
+        "768": {"slidesPerView": 2, "spaceBetween": 28},
+        "1024": {"slidesPerView": 2, "spaceBetween": 32}
+    }' class="swiper testimonialsSwiper w-full lg:w-3/5 md:hidden flex">
+        <swiper-slide *ngFor="let item of [].constructor(4); let i = index" class="p-5 mb-5">
+            <app-card [star]="i" [popularChoice]="true"></app-card>
+        </swiper-slide>
+    </swiper-container>
+
 </section>
 
 <section class="mt-16">
@@ -80,9 +96,21 @@
         class="max-w-2xl mb-4 text-md font-semibold tracking-tight leading-none md:text-lg xl:text-xl text-[#152C5B] dark:text-white font-poppins">
         Hotel Rooms
     </h1>
-    <div class="flex gap-16 mx-auto">
+
+    <div class="md:flex gap-16 mx-auto hidden">
         <app-card *ngFor="let item of [].constructor(4); let i = index" [star]="i" [popularChoice]="false"></app-card>
     </div>
+
+    <swiper-container loop="true" autoplay="true" autoplay-delay="5000" navigation="false" pagination="true"
+        space-between="28" slides-per-view="1" lazy="true" breakpoints='{
+        "630": {"slidesPerView": 2, "spaceBetween": 28},
+        "768": {"slidesPerView": 2, "spaceBetween": 28},
+        "1024": {"slidesPerView": 2, "spaceBetween": 32}
+    }' class="swiper testimonialsSwiper w-full lg:w-3/5 md:hidden flex">
+        <swiper-slide *ngFor="let item of [].constructor(4); let i = index" class="p-5 mb-5">
+            <app-card [star]="i" [popularChoice]="false"></app-card>
+        </swiper-slide>
+    </swiper-container>
 
     <div class="mt-5 text-center">
         <a href="#"
@@ -102,9 +130,22 @@
         class="max-w-2xl mb-4 text-md font-semibold tracking-tight leading-none md:text-lg xl:text-xl text-[#152C5B] dark:text-white font-poppins">
         Hotel Halls
     </h1>
-    <div class="flex gap-16 mx-auto">
+
+    <div class="md:flex gap-16 mx-auto hidden">
         <app-card *ngFor="let item of [].constructor(4); let i = index" [star]="i" [popularChoice]="false"></app-card>
     </div>
+
+    <swiper-container loop="true" autoplay="true" autoplay-delay="5000" navigation="false" pagination="true"
+        space-between="28" slides-per-view="1" lazy="true" breakpoints='{
+        "630": {"slidesPerView": 2, "spaceBetween": 28},
+        "768": {"slidesPerView": 2, "spaceBetween": 28},
+        "1024": {"slidesPerView": 2, "spaceBetween": 32}
+    }' class="swiper testimonialsSwiper w-full lg:w-3/5 md:hidden flex">
+        <swiper-slide *ngFor="let item of [].constructor(4); let i = index" class="p-5 mb-5">
+            <app-card [star]="i" [popularChoice]="false"></app-card>
+        </swiper-slide>
+    </swiper-container>
+
 
     <div class="mt-5 text-center">
         <a href="#"
@@ -124,9 +165,21 @@
         class="max-w-2xl mb-4 text-md font-semibold tracking-tight leading-none md:text-lg xl:text-xl text-[#152C5B] dark:text-white font-poppins">
         Hotel Day Out Packages
     </h1>
-    <div class="flex gap-16 mx-auto">
+
+    <div class="md:flex gap-16 mx-auto hidden">
         <app-card *ngFor="let item of [].constructor(4); let i = index" [star]="i" [popularChoice]="false"></app-card>
     </div>
+
+    <swiper-container loop="true" autoplay="true" autoplay-delay="5000" navigation="false" pagination="true"
+        space-between="28" slides-per-view="1" lazy="true" breakpoints='{
+        "630": {"slidesPerView": 2, "spaceBetween": 28},
+        "768": {"slidesPerView": 2, "spaceBetween": 28},
+        "1024": {"slidesPerView": 2, "spaceBetween": 32}
+    }' class="swiper testimonialsSwiper w-full lg:w-3/5 md:hidden flex">
+        <swiper-slide *ngFor="let item of [].constructor(4); let i = index" class="p-5 mb-5">
+            <app-card [star]="i" [popularChoice]="false"></app-card>
+        </swiper-slide>
+    </swiper-container>
 
     <div class="mt-5 text-center">
         <a href="#"
@@ -156,13 +209,16 @@
             </div>
 
             <swiper-container loop="true" autoplay="true" autoplay-delay="5000" navigation="false" pagination="false"
-                space-between="28" slides-per-view="2" lazy="true"
-                breakpoints='{"768": {"slidesPerView": 2, "spaceBetween": 28}, "1024": {"slidesPerView": 2, "spaceBetween": 32}}'
-                class="swiper testimonialsSwiper w-full lg:w-3/5">
+                space-between="28" slides-per-view="2" lazy="true" breakpoints='{
+                    "200": {"slidesPerView": 1, "spaceBetween": 28},
+                    "768": {"slidesPerView": 2, "spaceBetween": 28},
+                    "1024": {"slidesPerView": 2, "spaceBetween": 32}
+                }' class="swiper testimonialsSwiper w-full lg:w-3/5">
                 <swiper-slide *ngFor="let i of [].constructor(5)">
                     <app-slider-card></app-slider-card>
                 </swiper-slide>
             </swiper-container>
+
         </div>
     </div>
 </section>
