--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="max-w-sm bg-white dark:bg-[#151c26] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-105">
+<div class="max-w-sm bg-white dark:bg-[#151c26] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03]">
     <div class="relative">
         <img src="public/images/Rectangle 3.png" alt="Room Image" class="w-full h-48 object-cover">
         <div class="absolute top-4 left-4 bg-pink-500 text-white text-sm px-4 py-1 rounded-full" *ngIf="popularChoice">
