--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <button type="button"
+            <button type="button" routerLink="explore"
                 class="mb-10 font-bold text-md px-5 py-2.5 text-center inline-flex items-center text-white rounded-lg group  bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80">
                 Book Now
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -113,7 +113,7 @@
     </swiper-container>
 
     <div class="mt-5 text-center">
-        <a href="#"
+        <a routerLink="explore"
             class="inline-flex items-center px-3 py-2 text-sm text-center dark:text-white text-gray-700 hover:scale-105 font-semibold transition-transform duration-700 ease-in-out transform">
             Explore More
             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -148,7 +148,7 @@
 
 
     <div class="mt-5 text-center">
-        <a href="#"
+        <a routerLink="explore"
             class="inline-flex items-center px-3 py-2 text-sm text-center dark:text-white text-gray-700 hover:scale-105 font-semibold transition-transform duration-700 ease-in-out transform">
             Explore More
             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -182,7 +182,7 @@
     </swiper-container>
 
     <div class="mt-5 text-center">
-        <a href="#"
+        <a routerLink="explore"
             class="inline-flex items-center px-3 py-2 text-sm text-center dark:text-white text-gray-700 hover:scale-105 font-semibold transition-transform duration-700 ease-in-out transform">
             Explore More
             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
