--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-white dark:bg-gray-900">
+<footer class="bg-white dark:bg-gray-900" id="footer">
     <hr class="my-6 border-gray-300 sm:mx-auto dark:border-gray-600 lg:my-8" />
     <div class="mx-auto w-full max-w-screen-xl p-6 lg:py-8">
         <div class="md:flex md:justify-between">
