--- a/src/app/pages/view-users-reservations/view-users-reservations.component.html
+++ b/src/app/pages/view-users-reservations/view-users-reservations.component.html
@@ -1,1 +1,25 @@
-<p>view-users-reservations works!</p>
+<section class="bg-white py-12 antialiased dark:bg-gray-900 md:py-16">
+    <div class="mx-auto max-w-screen-xl px-4 2xl:px-0">
+        <div class="mx-auto max-w-5xl bg-white dark:bg-gray-800 rounded-lg shadow-lg p-6 md:p-8">
+            <div class="flex flex-col sm:flex-row sm:items-center sm:justify-between mb-6">
+                <h2 class="text-2xl font-bold text-gray-900 dark:text-white">My Reservations</h2>
+
+                <div class="mt-4 sm:mt-0">
+                    <select id="order-type"
+                        class="block w-full min-w-[10rem] rounded-lg border border-gray-300 bg-white p-3 text-sm text-gray-900 focus:border-blue-500 focus:ring-blue-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-blue-500 dark:focus:ring-blue-500 transition duration-150">
+                        <option selected>Pending Reservations</option>
+                        <option value="pre-order">Visited (Paid)</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="flow-root">
+                <div class="space-y-6">
+                    <!-- Reservation Cards -->
+                    <app-reservation-card *ngFor="let i of [].constructor(5)"
+                        class="block p-6 bg-white dark:bg-gray-800 rounded-lg shadow-md transition-transform duration-200 transform hover:-translate-y-1 hover:shadow-lg"></app-reservation-card>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
