--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,6 +1,6 @@
 <div
-    class="h-full max-w-sm bg-white dark:bg-[#151c26] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03]">
-    <div class="relative">
+    class="h-full max-w-sm bg-white dark:bg-[#151c26] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03] flex flex-col">
+    <div class="relative flex-grow">
         <img src="public/images/Rectangle 3.png" alt="Room" class="w-full h-48 object-cover">
         <div class="absolute top-4 left-4 bg-pink-500 text-white text-sm px-4 py-1 rounded-full"
             *ngIf="resource.rating > 4">
@@ -8,30 +8,32 @@
         </div>
     </div>
 
-    <div class="p-4">
+    <div class="p-4 flex flex-col justify-between flex-grow">
         <div class="flex justify-between items-center mb-2">
             <h2 class="text-lg font-semibold text-gray-800 dark:text-gray-400">{{resource.name}}</h2>
-            <span class="text-lg font-semibold text-blue-600">Rs. {{resource.price}}</span>
         </div>
-        <p class="text-gray-500 dark:text-gray-200 text-sm">{{resource.description == null? resource.features : resource.description}}</p>
+        <p class="text-gray-500 dark:text-gray-200 text-sm">{{resource.description == null? resource.features :
+            resource.description}}</p>
 
-        <div class="flex items-center mt-3">
+        <div class="mt-auto">
+            <div class="mt-3 flex justify-between items-center ">
+                <div class="flex items-center">
+                    <svg class="w-4 h-4 text-amber-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                        fill="currentColor" viewBox="0 0 22 20" *ngFor="let item of [].constructor(resource.rating)">
+                        <path
+                            d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+                    </svg>
 
-            <svg class="w-4 h-4 text-amber-500 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                fill="currentColor" viewBox="0 0 22 20" *ngFor="let item of [].constructor(resource.rating)">
-                <path
-                    d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
-            </svg>
+                    <svg class="w-4 h-4 ms-1 text-gray-300 dark:text-gray-500" aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20"
+                        *ngFor="let item of [].constructor(5-resource.rating)">
+                        <path
+                            d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
+                    </svg>
+                </div>
 
-            <svg class="w-4 h-4 ms-1 text-gray-300 dark:text-gray-500" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 22 20"
-                *ngFor="let item of [].constructor(5-resource.rating)">
-                <path
-                    d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z" />
-            </svg>
-
+                <span class="text-xl font-semibold text-blue-600">Rs. {{resource.price}}</span>
+            </div>
         </div>
-
     </div>
-
 </div>
