--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
+<app-header *ngIf="showFullLayout"></app-header>
 <div class="container mx-auto">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<app-footer *ngIf="showFullLayout"></app-footer>
