--- a/src/app/common/card/card.component.html
+++ b/src/app/common/card/card.component.html
@@ -1,7 +1,8 @@
 <div
-    class="h-full max-w-sm bg-white dark:bg-[#151c26] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03] flex flex-col">
+    class="h-full max-w-sm bg-white dark:bg-[rgb(21,28,38)] rounded-[15px] shadow-lg overflow-hidden transition-transform duration-500 ease-in-out transform hover:scale-[1.03] flex flex-col">
     <div class="relative flex-grow">
-        <img src="public/images/Rectangle 3.png" alt="Room" class="w-full h-48 object-cover">
+        <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/529992676.jpg?k=f62c521c45cf09ba84af2e5c92da714e613781c96a52c49a8df86b47e7222d11&o=&hp=1"
+            alt="Room" class="w-full h-48 object-cover">
         <div class="absolute top-4 left-4 bg-pink-500 text-white text-sm px-4 py-1 rounded-full"
             *ngIf="resource.rating > 4">
             Top Rated
@@ -12,8 +13,7 @@
         <div class="flex justify-between items-center mb-2">
             <h2 class="text-lg font-semibold text-gray-800 dark:text-gray-400">{{resource.name}}</h2>
         </div>
-        <p class="text-gray-500 dark:text-gray-200 text-sm">{{resource.description == null? resource.features :
-            resource.description}}</p>
+        <p class="text-gray-500 dark:text-gray-200 text-sm">{{resource.description}}</p>
 
         <div class="mt-auto">
             <div class="mt-3 flex justify-between items-center ">
