--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
                     <li>
-                        <a routerLink="profile"
+                        <a (click)="viewProfile()"
                             class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Profile</a>
                     </li>
                     <li>
@@ -93,7 +93,7 @@
                         Picks</a>
                 </li>
                 <li>
-                    <a routerLink="explore"
+                    <a routerLink="/explore"
                         class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Book
                         Now</a>
                 </li>
