--- a/src/app/pages/explore/explore.component.html
+++ b/src/app/pages/explore/explore.component.html
@@ -255,143 +255,62 @@
                 <div class="grid grid-cols-1 gap-x-8 gap-y-10 lg:grid-cols-6">
                     <!-- Filters -->
                     <form class="hidden lg:block">
-                        <h3 class="sr-only">Categories</h3>
                         <ul role="list" class="space-y-4 border-b border-gray-200 pb-6 text-sm text-gray-900">
                             <li>
-                                <a [class]="'block py-3'" [ngClass]="selectedResource === resource? 'font-semibold text-[14px]' : 'font-medium'"
+                                <a [class]="'block py-3'"
+                                    [ngClass]="selectedResource === resource? 'font-semibold text-[14px]' : 'font-medium'"
                                     *ngFor="let resource of resourceOptions"
                                     (click)="setSelectedResource(resource)">{{resource}}</a>
                             </li>
                         </ul>
 
-                        <div class="border-b border-gray-200 py-6">
-                            <!-- Filter section, show/hide based on section state. -->
-                            <div class="pt-6" id="filter-section-0">
-                                <div class="space-y-4">
-                                    <div class="flex items-center">
-                                        <input id="filter-color-0" name="color[]" value="white" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-0" class="ml-3 text-sm text-gray-600">White</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-color-1" name="color[]" value="beige" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-1" class="ml-3 text-sm text-gray-600">Beige</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-color-2" name="color[]" value="blue" type="checkbox" checked
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-2" class="ml-3 text-sm text-gray-600">Blue</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-color-3" name="color[]" value="brown" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-3" class="ml-3 text-sm text-gray-600">Brown</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-color-4" name="color[]" value="green" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-4" class="ml-3 text-sm text-gray-600">Green</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-color-5" name="color[]" value="purple" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-color-5" class="ml-3 text-sm text-gray-600">Purple</label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="border-b border-gray-200 py-6">
+                        <div class="border-b border-gray-200 py-6"
+                            *ngFor="let i of resourceFilterCategories[0]; index as idx">
                             <h3 class="-my-3 flow-root">
                                 <!-- Expand/collapse section button -->
                                 <button type="button"
-                                    class="flex w-full items-center justify-between bg-white dark:bg-[#111827] py-3 text-sm text-gray-400 hover:text-gray-500"
-                                    aria-controls="filter-section-1" aria-expanded="false">
-                                    <span class="font-medium text-gray-900">Category</span>
-                                    <span class="ml-6 flex items-center">
-                                        <!-- Expand icon, show/hide based on section open state. -->
-                                        <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                                            data-slot="icon">
-                                            <path
-                                                d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
-                                        </svg>
-                                        <!-- Collapse icon, show/hide based on section open state. -->
-                                        <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                                            data-slot="icon">
-                                            <path fill-rule="evenodd"
-                                                d="M4 10a.75.75 0 0 1 .75-.75h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 10Z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                    </span>
+                                    class="flex w-full items-center justify-between bg-white dark:bg-[#111827] px-2 py-3 text-gray-400 hover:text-gray-500"
+                                    aria-controls="filter-section-mobile-0" aria-expanded="false">
+                                    <span class="font-medium text-gray-900">{{i}}</span>
+                                    <button *ngIf="resourceFilterCategories[idx][-1]" (click)="clearFilter(i)" class="ml-6 flex items-center bg-blue-50 px-2 rounded-lg">
+                                        Clear
+                                    </button>                                    
                                 </button>
                             </h3>
                             <!-- Filter section, show/hide based on section state. -->
                             <div class="pt-6" id="filter-section-1">
                                 <div class="space-y-4">
-                                    <div class="flex items-center">
-                                        <input id="filter-category-0" name="category[]" value="new-arrivals"
-                                            type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-category-0" class="ml-3 text-sm text-gray-600">New
-                                            Arrivals</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-category-1" name="category[]" value="sale" type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-category-1" class="ml-3 text-sm text-gray-600">Sale</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-category-2" name="category[]" value="travel" type="checkbox"
-                                            checked
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-category-2" class="ml-3 text-sm text-gray-600">Travel</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-category-3" name="category[]" value="organization"
-                                            type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-category-3"
-                                            class="ml-3 text-sm text-gray-600">Organization</label>
-                                    </div>
-                                    <div class="flex items-center">
-                                        <input id="filter-category-4" name="category[]" value="accessories"
-                                            type="checkbox"
-                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
-                                        <label for="filter-category-4"
-                                            class="ml-3 text-sm text-gray-600">Accessories</label>
+                                    <div class="flex items-center"
+                                        *ngFor="let filterCategory of resourceFilterCategories[idx+1]">
+                                        <input [id]="filterCategory" [name]="i" [value]="filterCategory" type="radio"
+                                            class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500"
+                                            (change)="toggleFilter(i, filterCategory)">
+                                        <label [for]="filterCategory"
+                                            class="ml-3 text-sm text-gray-600">{{filterCategory}}</label>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
+
                         <div class="border-b border-gray-200 py-6">
                             <h3 class="-my-3 flow-root">
                                 <!-- Expand/collapse section button -->
                                 <button type="button"
-                                    class="flex w-full items-center justify-between bg-white dark:bg-[#111827] py-3 text-sm text-gray-400 hover:text-gray-500"
-                                    aria-controls="filter-section-2" aria-expanded="false">
-                                    <span class="font-medium text-gray-900">Size</span>
-                                    <span class="ml-6 flex items-center">
-                                        <!-- Expand icon, show/hide based on section open state. -->
-                                        <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                                            data-slot="icon">
-                                            <path
-                                                d="M10.75 4.75a.75.75 0 0 0-1.5 0v4.5h-4.5a.75.75 0 0 0 0 1.5h4.5v4.5a.75.75 0 0 0 1.5 0v-4.5h4.5a.75.75 0 0 0 0-1.5h-4.5v-4.5Z" />
-                                        </svg>
-                                        <!-- Collapse icon, show/hide based on section open state. -->
-                                        <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"
-                                            data-slot="icon">
-                                            <path fill-rule="evenodd"
-                                                d="M4 10a.75.75 0 0 1 .75-.75h10.5a.75.75 0 0 1 0 1.5H4.75A.75.75 0 0 1 4 10Z"
-                                                clip-rule="evenodd" />
-                                        </svg>
-                                    </span>
+                                    class="flex w-full items-center justify-between bg-white dark:bg-[#111827] px-2 py-3 text-gray-400 hover:text-gray-500"
+                                    aria-controls="filter-section-mobile-0" aria-expanded="false">
+                                    <span class="font-medium text-gray-900">Rating</span>
+                                    <button *ngIf="isClearRatingFilterShown" (click)="clearRatingFilter()" class="ml-6 flex items-center bg-blue-50 px-2 rounded-lg">
+                                        Clear
+                                    </button>                                    
                                 </button>
                             </h3>
 
                             <div class="pt-6" id="filter-section-mobile-2">
                                 <div class="space-y-6">
                                     <div class="flex items-center" *ngFor="let rating of [1,2,3,4,5]">
-                                        <input id="filter-mobile-size-0" name="size[]" [value]="rating" type="checkbox"
+                                        <input id="filter-mobile-size-0" name="rating" [value]="rating" type="radio"
+                                        (change)="filterByRating(rating)"
                                             class="h-4 w-4 rounded border-gray-300 text-blue-600 focus:ring-blue-500">
                                         <div class="ms-3 flex">
                                             <svg class="w-4 h-4 ms-1 text-amber-500" aria-hidden="true"
@@ -436,11 +355,6 @@
 </div>
 
 
-
-
-
-
-
-<div *ngIf="selectedId" class="fixed inset-0 flex items-start justify-center z-50">
-    <app-popup-card [resource]="resources[selectedId]" (close)="setSelectedId(null)"></app-popup-card>
+<div *ngIf="showModel" class="fixed inset-0 flex items-start justify-center z-50">
+    <app-popup-card [resource]="selectedId? resources[selectedId] : resources[0]" (close)="setSelectedId(null)"></app-popup-card>
 </div>
