--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900 mx-5">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <a routerLink="" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img src="public/images/logo.png" class="h-8" alt="Tropical Heven Logo" />
         </a>
         <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse relative">
@@ -9,15 +9,30 @@
                 class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
                 id="user-menu-button" aria-expanded="false" (click)="toggleDropdown()" aria-controls="userDropdown">
                 <span class="sr-only">Open user menu</span>
-                <img class="w-8 h-8 rounded-full" [src]="userImg" alt="user">
+                <img *ngIf="loggedIn" class="w-8 h-8 rounded-full" [src]="userImg" alt="user">
             </button>
+            <div class="bg-white">
+                <div *ngIf="!loggedIn" class="hidden md:flex gap-3">
+
+                    <button routerLink="/login" type="button" class="text-gray-900 rounded-full group bg-border-to-r border-2 hover:border-blue-500 border-blue-400 from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-sm shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-semibold text-sm px-3 py-1 hover:text-white 
+                        transition-transform transform hover:scale-[1.02]">
+                        Log In
+                    </button>
+
+                    <button routerLink="/register" type="button" class="text-white rounded-full group bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-sm shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-semibold text-sm px-5 py-1
+                                 transition-transform transform hover:scale-[1.02]">
+                        Register
+                    </button>
+                </div>
+            </div>
+
 
             <!-- Dropdown menu -->
             <div id="userDropdown" *ngIf="isDropdownOpen"
                 class="absolute z-50 top-full mt-2 right-0 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
                 <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
-                    <div>Danula Rathnayaka</div>
-                    <div class="font-medium truncate">danusathmin&#64;gmail.com</div>
+                    <div>{{usersName}}</div>
+                    <div class="font-medium truncate">{{usersEmail}}</div>
                 </div>
                 <ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="avatarButton">
                     <li>
@@ -30,7 +45,7 @@
                     </li>
                 </ul>
                 <div class="py-1">
-                    <a href="#"
+                    <a (click)="signOut()"
                         class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
                         out</a>
                 </div>
@@ -74,6 +89,18 @@
                 <li>
                     <a href="#testimonials"
                         class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Testimonials</a>
+                </li>
+                <li *ngIf="!loggedIn">
+                    <button routerLink="/login" type="button" class="ms-3 text-gray-900 rounded-lg group bg-border-to-r border-2 hover:border-blue-500 border-blue-400 from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-sm shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-semibold text-sm px-3 py-2 hover:text-white 
+                            transition-transform transform hover:scale-[1.02]">
+                        Log In
+                    </button>
+                </li>
+                <li *ngIf="!loggedIn">
+                    <button routerLink="/register" type="button" class="ms-3 mt-2 text-white rounded-lg group bg-gradient-to-r from-blue-400 via-blue-500 to-blue-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-sm shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-semibold text-sm px-5 py-2
+                                     transition-transform transform hover:scale-[1.02]">
+                        Register
+                    </button>
                 </li>
             </ul>
         </div>
